--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@azure/storage-blob": "^12.27.0",
     "applicationinsights": "^3.7.0",
     "axios": "^1.9.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
